[gd_scene load_steps=3 format=3 uid="uid://clyradialogue01"]

[ext_resource type="Script" path="res://ui/components/lyra_dialogue.gd" id="1"]
[ext_resource type="Theme" path="res://themes/KeyboardDefenseTheme.tres" id="2"]

[node name="LyraDialogue" type="PanelContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -180.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Content" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PortraitFrame" type="PanelContainer" parent="Content"]
custom_minimum_size = Vector2(112, 112)
layout_mode = 2
size_flags_vertical = 4

[node name="Portrait" type="TextureRect" parent="Content/PortraitFrame"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="TextBox" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Content/TextBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Lyra"

[node name="DialogueLabel" type="RichTextLabel" parent="Content/TextBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Welcome, young defender!"
fit_content = true
scroll_active = false

[node name="ContinueHint" type="Label" parent="Content/TextBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.65, 0.86, 1, 0.7)
text = "Press Enter to continue..."
horizontal_alignment = 2
